test/libsolidity/syntaxTests/modifierAreas/mutability/invalid/function_discrepancy.sol
contract C {
    apply pure {
        function f() view {}
    }
}
// ----
// ParserError: (51-55): Cannot override modifier area's state mutability.
